# PickaloApp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  PRD.md  README.md  api_response_debug.json  docker-compose.yml  docker-setup-guide-for-admin-dashboard.md  matchmaking_edge_cases.md  minio_api_test_results.md  package-lock.json  test_minio_setup.md  untitled.pen
backend/: .env.example  =7.2.0  Dockerfile  add_courts.py  alembic.ini  check_dai_kim_matches.py  cleanup_request.py  clear_bookings.py  create_test_user.py  create_test_user_v2.py  list_venues.py  pyproject.toml  requirements.txt  reset_test_passwords.py  seed_dai_kim.py  seed_extra_bookings.py  seed_extra_bookings_v2.py  test.env  test_api.py  test_overlap_query.py  verify_test_users.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  20260422_1052-c7309f9d6890_add_venue_reviews.py  20260422_1920-bb7e2bad3417_refactor_multi_court_booking.py  20260423_0924-58a981ca9001_add_courts_and_booking_slots.py  (+10 more)
backend/app/: main.py
backend/app/api/: deps.py
backend/scratch/: add_push_token_column.py  check_roles.py  check_tokens.py  check_users.py  count_quotes.py  create_specific_booking.py  create_test_user.py  debug_admin.py  debug_list_users.py  debug_verify.py  ensure_admin.py  fix_admin_schema.py  list_users.py  seed_data.py  test_login.py  test_login_ip.py  test_venues.py  update_password.py  verify_admin.py
backend/scripts/: add_courts.py  check_pricing.py  clear_bookings.py  fix_venue_data.py  pay_booking.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_bookings.py  test_main.py  test_map.py  test_pricing.py  test_venues.py
(+317 files in other folders)
